used openapi api models
